# llmqore

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
cmake/: LLMCoreConfig.cmake.in  LLMQoreConfig.cmake.in
docs/: api-overview.md  architecture.md  integration.md  mcp-bridge.md  quick-start.md  tool-calling.md
docs/acp/: architecture.md  authentication.md  implementation-notes.md
docs/acp/architecture/: classes.md  client-capabilities.md  connection-and-session.md  prompt-turn.md  transport-and-session.md  types.md
docs/architecture/: messages-and-content.md  overview.md  request-lifecycle.md  tools.md
docs/architecture/clients/: base-client.md  providers.md
docs/mcp/: architecture.md  client-usage.md  mcp_protocol_coverage.md  sampling.md  server-hosting.md
docs/mcp/architecture/: classes.md
example/: CMakeLists.txt  ChatController.cpp  ChatController.hpp  ExampleTools.hpp  Main.qml  agents.json  main.cpp  mcp-servers.json
example/mcp-http-probe/: main.cpp
example/mcp-server-demo/: main.cpp
include/: QByteArrayView  QPromise
include/LLMCore/: BaseClient.hpp  BaseElicitationProvider.hpp  BaseMessage.hpp  BasePromptProvider.hpp  BaseResourceProvider.hpp  BaseRootsProvider.hpp  BaseTool.hpp  ClaudeClient.hpp  Clients  ContentBlocks.hpp  Core  GoogleAIClient.hpp  HttpClient.hpp  HttpRequestParser.hpp  HttpResponse.hpp  HttpStream.hpp  HttpTransportError.hpp  LLMCore  LLMCore_global.h  LineBuffer.hpp  LlamaCppClient.hpp  Log.hpp  Mcp  McpClient.hpp  McpExceptions.hpp  McpHttpServerTransport.hpp  McpHttpTransport.hpp  McpPipeTransport.hpp  McpRemoteTool.hpp  McpServer.hpp  McpSession.hpp  McpStdioServerTransport.hpp  McpStdioTransport.hpp  McpToolBinder.hpp  McpTransport.hpp  McpTypes.hpp  Network  OllamaClient.hpp  OpenAIClient.hpp  OpenAIResponsesClient.hpp  (+11 more)
include/LLMQore/: AcpAgentConfig.hpp  AcpAgentRegistry.hpp  AcpClient.hpp  AcpFileSystemProvider.hpp  AcpPermissionProvider.hpp  AcpTerminalProvider.hpp  AcpTypes.hpp  BaseClient.hpp  CallbackPermissionProvider.hpp  ClaudeClient.hpp  DefaultFileSystemProvider.hpp  FutureUtils.hpp  GoogleAIClient.hpp  HttpClient.hpp  JsonRpcSession.hpp  LlamaCppClient.hpp  Log.hpp  Mcp  McpClient.hpp  McpHttpServerTransport.hpp  McpHttpTransport.hpp  McpRemoteTool.hpp  McpServer.hpp  McpStdioServerTransport.hpp  McpTypes.hpp  MistralClient.hpp  OllamaClient.hpp  OpenAIClient.hpp  OpenAIResponsesClient.hpp  RpcExceptions.hpp  RpcPipeTransport.hpp  RpcStdioTransport.hpp  RpcTransport.hpp  TerminalManager.hpp  ToolLoopRunner.hpp  ToolsManager.hpp
mcp-bridge/: BridgeConfig.cpp  BridgeConfig.hpp  BridgeServer.cpp  BridgeServer.hpp  CMakeLists.txt  mcp-bridge.json
source/: CMakeLists.txt
source/acp/: AcpAgentConfig.cpp  AcpAgentRegistry.cpp  AcpClient.cpp  AcpTypes.cpp  DefaultFileSystemProvider.cpp  TerminalManager.cpp
source/clients/claude/: ClaudeClient.cpp  ClaudeMessage.cpp  ClaudeMessage.hpp
source/clients/google/: GoogleAIClient.cpp  GoogleMessage.cpp  GoogleMessage.hpp
source/clients/llamacpp/: LlamaCppClient.cpp
source/clients/mistral/: MistralClient.cpp
source/clients/ollama/: OllamaClient.cpp  OllamaMessage.cpp  OllamaMessage.hpp
source/clients/openai/: OpenAIClient.cpp  OpenAIMessage.cpp  OpenAIMessage.hpp  OpenAIResponsesClient.cpp  OpenAIResponsesMessage.cpp  OpenAIResponsesMessage.hpp
source/core/: BaseClient.cpp  BaseMessage.cpp  Log.cpp  ToolLoopRunner.cpp
source/mcp/: BasePromptProvider.cpp  BaseResourceProvider.cpp  McpClient.cpp  McpHttpServerTransport.cpp  McpHttpTransport.cpp  McpLineFramer.hpp  McpPipeTransport.cpp  McpRemoteTool.cpp  McpServer.cpp  McpSession.cpp  McpStdioClientTransport.cpp  McpStdioServerTransport.cpp  McpToolBinder.cpp  McpTransport.cpp  McpTypes.cpp
source/network/: HttpClient.cpp  HttpRequestParser.cpp  HttpResponse.cpp  HttpStream.cpp  HttpTransportError.cpp  LineBuffer.cpp  SSEBuffer.cpp  SSEParser.cpp
source/rpc/: JsonRpcSession.cpp  RpcLineFramer.hpp  RpcPipeTransport.cpp  RpcStdioClientTransport.cpp  RpcTransport.cpp
source/tools/: BaseTool.cpp  ToolHandler.cpp  ToolHandler.hpp  ToolRegistry.cpp  ToolResult.cpp  ToolsManager.cpp
tests/: CMakeLists.txt  tst_AcpAgentConfig.cpp  tst_AcpAgentRegistry.cpp  tst_AcpLoopback.cpp  tst_AcpProviders.cpp  tst_AcpTypes.cpp  tst_ClaudeMessage.cpp  tst_ClientConstructors.cpp  tst_ContentBlocks.cpp  tst_GoogleMessage.cpp  tst_HttpClient.cpp  tst_HttpRequestParser.cpp  tst_LineBuffer.cpp  tst_McpHttpServer.cpp  tst_McpLineFramer.cpp  tst_McpLoopback.cpp  tst_McpTypes.cpp  tst_OllamaMessage.cpp  tst_OpenAIMessage.cpp  tst_OpenAIResponsesMessage.cpp  tst_SSEBuffer.cpp  tst_SSEParser.cpp  tst_SSEUtils.cpp  tst_TokenUsage.cpp  tst_ToolHandler.cpp  tst_ToolLoopRunner.cpp  tst_ToolResult.cpp  tst_ToolsManager.cpp
tests/integration/: CMakeLists.txt  IntegrationTestHelpers.hpp  tst_ClaudeIntegration.cpp  tst_ClaudeMcpIntegration.cpp  tst_GoogleAIIntegration.cpp  tst_LlamaCppIntegration.cpp  tst_MistralIntegration.cpp  tst_OllamaIntegration.cpp  tst_OpenAIIntegration.cpp  tst_OpenAIResponsesIntegration.cpp
